<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ActivityCambiar">

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_id_hint"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/select_origen"/>

    <Spinner
        android:id="@+id/spDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/select_destino"/>

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_fecha_hint"
        android:focusable="false"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hora_hint"
        android:focusable="false"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total: $0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_actualizar"/>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:layout_marginTop="16dp"/>
</LinearLayout>
