<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnVender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vender" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar" />

</LinearLayout>
